--- a/certs.html
+++ b/certs.html
@@ -25,7 +25,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Projects</a></li>
-				<li class="active"><a href="certs.html">Certifications and Achievement</a></li>
+				<li class="active"><a href="certs.html">Certifications </a></li>
 				<li><a href="about.html">About</a></li>
 			</ul>
 			<ul class="icons">
@@ -49,9 +49,9 @@
 					<a href="#" class="image fit"><img
 							src="images/rr-sports-analytics.png"
 							alt="Sports Analytics by Rajasthan Royals" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis
-						dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<p>Key Concepts: Introduction to Sports Analytics, Fundaments of Analytics, Web Scraping, Betting Odds Calculation, 
+						Data Preparation, Power Query Basics, MiniMax Rating, Duckworth Lewis Calculation, Computer Vision in Analytics
+					</p>
 					<ul class="actions special">
 						<li><a href="https://rsb.rajasthanroyals.com/share-certificate?serialno=C5H2VUW8" class="button">View Certificate</a></li>
 					</ul>
@@ -63,9 +63,8 @@
 					</header>
 					<a href="#" class="image fit"><img src="images/google-data-analytics.png"
 							alt="Data Science Professional Certificate" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis
-						dolor imperdiet dolor mattis sagittis magna etiam.</	p>
+					<p>Key Concepts: Foundations of Data, Data Exploration, Data Cleaning, Sharing thoughts through Data Visualization, 
+						Data Analysis with R Programming, Dashboard Prep in MS Excel, Complete Case Study on Data Analytics.</p>
 					<ul class="actions special">
 						<li><a href="images/google-data-analytics.png" class="button">View Certificate</a></li>
 					</ul>
@@ -73,14 +72,14 @@
 				<article class="certification">
 					<header>
 						<span class="date">Nov 2021</span>
-						<h2><a href="#">Associate Analytics by NASSCOM</a></h2>
+						<h2><a href="#">Associate Analytics by NASSCOM - Gold Ranking</a></h2>
 					</header>
 					<a href="#" class="image fit"><img
 							src="images/associate-analytics-nasscom.png"
 							alt="Associate Analytics by NASSCOM" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis
-						dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<p>Key Concepts: Introduction to Analytics, R Programming, SQL Using R, Correlattion and 
+						Regression Analysis, Data Management and Big Data Tools, Machine Learning Algorithms
+						Data Management and Big Data Tools, Data Visualization.</p>
 					<ul class="actions special">
 						<li><a href="images/associate-analytics-nasscom.png" class="button">View Certificate</a></li>
 					</ul>
@@ -93,11 +92,41 @@
 					<a href="#" class="image fit"><img
 							src="images/excel-macquire.png"
 							alt="Excel Skills for Business Specialization" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis
-						dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<p>Key Concepts - Concatenation, Pivot tables and charts, Lookup Tables, Macros, VBA, Data Validation, Business Dashboards,
+						Financial Modelling, Data Cleaning, Advanced Spreadsheets, Graphs and Charts, formulas and automated calculations.</p>
 					<ul class="actions special">
 						<li><a href="images/excel-macquire.png" class="button">View Certificate</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<span class="date">April 15, 2024</span>
+						<h2><a href="#">Nest JS - The Complete Developer's Guide<br />	</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/nest.js-cert.jpeg" alt="" /></a>
+					<p>Key Learning - Deploy a feature-complete app to production, Integration and Unit Tests, 
+						Automatically validate data included with incoming requests,
+						Apply structure to your code with Typescript
+						Use Guards to prevent unauthorized users from gaining access to sensitive data
+						Model your app's data using TypeORM entities
+					</p>
+					<ul class="actions special">
+						<li><a href="images/nest.js-cert.jpeg" class="button">View Certificate</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<span class="date">March 19, 2024</span>
+						<h2><a href="#">React - The Complete Guide 2024<br /></a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/react-cert.jpeg" alt="" /></a>
+					<p> Build multiple high-quality demo apps, including a fullstack app built with NextJS, React Hooks and React Components
+						Manage complex state efficiently with React's Context API & React Redux, routing & route-related data fetching with React Router
+						Implement user authentication in React apps, React Unit Testing, Implemenetation of JSX in react</p>
+					<ul class="actions special">
+						<li><a href="images/react-cert.jpeg" class="button">View Certificate</a></li>
 					</ul>
 				</article>
 			</section>
