--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										Pandas functions on the Covind-19 Dataset.<br />
 									</p>
 								</header>
-								<a href="https://github.com/pramod2110/Data-Analysis-with-Python---4" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/pramod2110/Data-Analysis-with-Python---4" class="image main"><img src="images/corona.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/pramod2110/Data-Analysis-with-Python---4" class="button large">Project Details</a></li>
 								</ul>
@@ -63,50 +63,51 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">April 24, 2024</span>
+										<h2><a href="#">Weather Dataset Analysis using Pandas<br />
+										Data Science Project </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/rr-sports-analytics.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/weather.jpeg" alt="" /></a>
+									<p>Data Collection [Obtaining data from a data scource], Data Preparation[Identifying errors, replacing null values, data transformation], Learning pandas through this dataset [different functions required for data analysis], Asking relevant questions with respect to the dataset, Answeriig questions by perfroming pandas operations and plots</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Crack Detection using Deep Learning<br />
+										</a></h2>
+										<h4><a href = "https://doi.org/10.3390/s23062954">View Publication</a></h4>
 									</header>
-									<a href="#" class="image fit"><img src="images/google-data-analytics.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/crack detection.png" alt="" /></a>
+									<p>Data Collection from industry, Data Preprocessing, Improviszed existing transfer learning algorithms - VGG16, Resnet50, Inception-Resnetv2, Compared different models, Created a custom hybrid model, Developed a pixel matching algorithm to classify the intensity of cracks - low, medium and high</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">April 18, 2024</span>
+										<h2><a href="#">Cricket - ODI Centuries Analysis upto 2007 using MS Excel<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/DASHBOARD.png" alt="" /></a>
+									<p>Web Scraping of data from ESPNCricinfo, Data Preparation, Pivot Chart Working to filter multiple data, Creating different graphs - Bar Chart, Trendlines, Applying Colors for better viewing,  Create a professional dashboard, Communicating key insights through dashboard</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">April 14, 2021</span>
+										<h2><a href="#">Python for Computer Vision - Introduction<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/computer vision.jpeg" alt="" /></a>
+									<p>Learning Computer Vision through Python</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
