--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Projects</a></li>
-				<li><a href="certs.html">Certifications and Achievements</a></li>
+				<li><a href="certs.html">Certifications</a></li>
 				<li class="active"><a href="about.html">About</a></li>
 			</ul>
 			<ul class="icons">
@@ -84,6 +84,11 @@
 					data-driven approaches. They have not only enriched the lives of those I've had the privilege to serve but have also shaped my 
 					trajectory towards a career in data science, where I continue to apply these invaluable skills and insights.</p>
 
+					<div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
+						<a href="#" class="image fit"><img src="images/viteach1.jpg" alt="PIC of me?" style="max-width: 92%;"></a>
+						<a href="#" class="image fit"><img src="images/viteach2.JPG" alt="another pic of me" style="max-width: 82%;"></a>
+					</div>
+
 				<!-- Passion for Data Science 
 								<h2>Passion for Data Science</h2>
 				<p>Express your passion for data science and any related projects or interests.</p>-->
@@ -126,8 +131,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li>&copy; Untitled</li>
-				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>Pramod Kumar</li>
+				<li>2024</li>
 			</ul>
 		</div>
 
