--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="certs.html">Certifications and Achievements</a></li>
+							<li><a href="certs.html">Certifications</a></li>
 							<li><a href="about.html">About</a></li>
 						</ul>
 						<ul class="icons">
@@ -141,11 +141,13 @@
 							</section>
 						</section>
 					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+		<!-- Copyright -->
+		<div id="copyright">
+			<ul>
+				<li>Pramod Kumar</li>
+				<li>2024</li>
+			</ul>
+		</div>
 
 			</div>
 
