--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<a href="https://github.com/pramod2110/Data-Analysis-with-Python---4" class="image main"><img src="images/profile_photo.jpg" alt="" /></a>
-						<h1> Pramod Kumar - Portfolio</h1>
+						<h1> Pramod Kumar </h1>
 						<p>Graduate Data Science Student at The Univeristy of Maryland, College Park.</p>
 						<p><a href="https://www.linkedin.com/in/pramod-k-129097174/">@Linkedin</a></p>
 						<ul class="actions">
@@ -159,6 +159,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
