--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<h2><a href="https://github.com/pramod2110/Data-Analysis-with-Python---4">COVID - 19 Dataset Analysis<br />
 									Using Pandas</a></h2>
 									<p>In this project, we perform big data analysis using <br />
-										Pandas functions on the Covind-19 Dataset.<br />
+										Pandas functions on the Covid-19 Dataset.<br />
 									</p>
 								</header>
 								<a href="https://github.com/pramod2110/Data-Analysis-with-Python---4" class="image main"><img src="images/corona.jpeg" alt="" /></a>
